# kdeconnect-sms

./: CMakeLists.txt  index.md
SourceFiles/: Application.cpp  Application.h  ContactWindow.cpp  ContactWindow.h  Google.cpp  Google.h  Helper.h  Main.cpp  MainWindow.cpp  MainWindow.h  OAuth2.cpp  OAuth2.h  SMS.cpp  SMS.h
